tdf#108852: Put signature infobar into the right frame

and thus avoid crash when user clicks 'show signatures' button
in a window where signature bar shouldn't even be

Change-Id: I5eba8d1ddd8c76dd10acedfa03d732df586748de
Reviewed-on: https://gerrit.libreoffice.org/39705
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit bc882e977144d60b850288045e3f6aab7cbad6f7)